--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@artist) do |f| %>
+<h1>Sign Up</h1>
+
   <% if @artist.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@artist.errors.count, "error") %> prohibited this artist from being saved:</h2>
@@ -10,6 +11,7 @@
       </ul>
     </div>
   <% end %>
+<%= form_for(@artist) do |f| %>
 
 
   <div class="field">
@@ -33,6 +35,18 @@
     <%= f.number_field :comment_id %>
   </div>
   <div class="actions">
+  <div class="field">
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+  </div>
     <%= f.submit %>
   </div>
 <% end %>
