Authentication and authorisation working

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -32,8 +32,8 @@
   <%= @artist.comment_id %>
 </p>
 
-
-<%= link_to 'Edit', edit_artist_path(@artist) %> |
+<%= link_to 'Add a song', new_song_path %>
+<%= link_to 'Edit', edit_artist_path(@artist) %>
 <%= link_to 'Back', artists_path %>
 
 
