--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -3,7 +3,6 @@
 <table>
   <tr>
     <th>Song name</th>
-
     <th>Artist</th>
     <th></th>
     <th></th>
@@ -15,13 +14,12 @@
     <td><%= link_to song.song_name, song %></td>
     <td><%= song.artist.band_name %></td>
     <td><%= song.comment_id %></td>
-    <td><%= link_to 'Show', song %></td>
-    <td><%= link_to 'Edit', edit_song_path(song) %></td>
-    <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Edit song', edit_song_path(song) %></td>
+    <td><%= link_to 'Destroy song', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Song', new_song_path %>
+<%= link_to 'Add New Song', new_song_path %>
