--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -7,15 +7,15 @@
     <th></th>
   </tr>
 
-<% @comments.each do |comment| %>
+<% @song.comments.each do |comment| %>
   <tr>
-    <td><%= link_to 'Show', comment %></td>
-    <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-    <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', song_comment_path(@song, comment) %></td>
+    <td><%= link_to 'Edit', edit_song_comment_path(@song, comment) %></td>
+    <td><%= link_to 'Destroy', [@song, comment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'New Comment', new_song_comment_path(@song) %>
