--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,22 +1,29 @@
+body {
+  font-family: Futura, helvetica, arial, sans-serif;
+  font-size: 14px;
+}
+
 nav {
-  width: 100%;
-  float: left;
+  width: 50%;
+  float: right;
   margin: 0 0 3em 0;
   padding: 0;
   list-style: none;
-  background-color: #f2f2f2;
-  border-bottom: 1px solid #ccc;
-  border-top: 1px solid #ccc;
 }
 
 nav li {
-  float:left;
+  float:right;
 }
+
 nav li a {
-    display: block;
-    padding: 8px 15px;
-    text-decoration: none;
-    font-weight: bold;
-    color: black;
-    border-right: 1px solid #ccc;
+  display: block;
+  padding: 8px 15px;
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+  border-right: 1px solid #ccc;
+}
+
+a:hover {
+  background-color:#EBE2C2;
 }
