Image sizes sorted to right size

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,29 +1,13 @@
-body {
-  font-family: Futura, helvetica, arial, sans-serif;
-  font-size: 14px;
-}
+/*
+* This is a manifest file that'll be compiled into application.css, which will include all the files
+* listed below.
+*
+* Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+* or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
+*
+* You're free to add application-wide styles to this file and they'll appear at the top of the
+* compiled file, but it's generally better to create a new file per style scope.
+*
 
-nav {
-  width: 50%;
-  float: right;
-  margin: 0 0 3em 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  float:right;
-}
-
-nav li a {
-  display: block;
-  padding: 8px 15px;
-  text-decoration: none;
-  font-weight: bold;
-  color: black;
-  border-right: 1px solid #ccc;
-}
-
-a:hover {
-  background-color:#EBE2C2;
-}
+*= require main.css
+*/
