--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -33,7 +33,10 @@
     <td><%= link_to 'Edit comment', edit_song_comment_path(@song, comment) if can? :edit, comment%></td>
 
    <td><%= link_to 'Delete comment', [@song, comment], method: :delete, data: { confirm: 'Are you sure?' } if can? :delete, comment %></td><br><br>
-   <tr>
+
+    <%= link_to 'Flag comment', flag_song_comment_path(@song, comment) %>
+   <!--def flag method [@song, comment] -->
+
 <% end %>
 </p>
 
