--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,3 +1,5 @@
+<div id="floating-signup_page">
+
 <h1>Sign Up</h1>
 
   <% if @artist.errors.any? %>
@@ -20,7 +22,7 @@
   </div>
   <div class="field">
     <%= f.label :biography %><br />
-    <%= f.text_area :biography %>
+    <%= f.text_field :biography %>
   </div>
   <div class="field">
     <%= f.label :band_image %><br />
@@ -43,5 +45,5 @@
     <%= f.submit %>
   </div>
 <% end %>
-
+</div>
 
