--- a/app/views/comments/flagged_comments.html.erb
+++ b/app/views/comments/flagged_comments.html.erb
@@ -1,6 +1,8 @@
 <h1>Listing flagged comments</h1>
 
 <% @comments.each do |comment| %>
-  <%= comment.comment_for_artist %>
+  Comment: <%= comment.comment_for_artist %>
+ Comment made by: <%= comment.artist.band_name %>
+ Comment made: <%= comment.created_at %>
 
 <% end %>
