Login page styling sorted

--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,4 +1,4 @@
-<div id="floating-signup_page">
+<div id="floating-signup-page">
 
 <h1>Sign Up</h1>
 
@@ -41,7 +41,7 @@
   <div class="field">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
-  </div>
+  </div><br>
     <%= f.submit %>
   </div>
 <% end %>
