--- a/app/views/comments/flagged_comments.html.erb
+++ b/app/views/comments/flagged_comments.html.erb
@@ -1,8 +1,20 @@
-<h1>Listing flagged comments</h1>
+<h1>Flagged comments</h1>
+<table border="1">
+  <tr>
+  <th>Comment:</th>
+  <th>Comment made by:</th>
+  <th>Time/date of comment:<th>
+  </tr>
+  <tr>
+  <% @comments.each do |comment| %>
+  <td><%= comment.comment_for_artist %></td>
+  <td><%= comment.artist.band_name %></td>
+  <td><%= comment.created_at %></td>
+  <td><%= link_to "Delete", song_comment_path(comment.song.id ,comment.id), method: :delete, data: { confirm: 'Are you sure?' } %><!-- when using nested routes, you have to specify the path and pass it the id's. in rake routes, the song_comment path is for show, update and destroy -->
+  </tr>
+  <% end %>
+</table>
 
-<% @comments.each do |comment| %>
-  Comment: <%= comment.comment_for_artist %>
- Comment made by: <%= comment.artist.band_name %>
- Comment made: <%= comment.created_at %>
 
-<% end %>
+
+
