--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 nav {
-  width: 50%;
+  width: 60%;
   float: right;
   margin: 0 0 3em 0;
   padding: 0;
@@ -38,7 +38,8 @@ h1 {
   max-width: 100px;
 }
 
-#floating-signup_page {
+
+#floating-signup-page {
   width: 200px;
   margin-left: auto;
  /* margin-right: 200px;*/
@@ -50,16 +51,16 @@ h1 {
 */  color: white;
 }
 
-.floating-page {
-  width: 450px;
+#floating-login-page {
+  width: 200px;
   margin-left: auto;
   margin-right: auto;
   padding: 50px;
-  margin-top: -45px;
+  margin-top: 0px;
   margin-bottom: 50px;
   border-radius: 5px;
-/*  background-color:rgba(255,0,0,0.2);
-*/  color: white;
+  background-color:rgba(255,0,0,0.2);
+  color: white;
 }
 
 a {
@@ -67,10 +68,14 @@ a {
 }
 
 
-label{
-    display: inline-block;
-    float: left;
-    clear: left;
-    width: 250px;
-    text-align: left;
+label {
+  display: inline-block;
+  float: left;
+  clear: left;
+  width: 250px;
+  text-align: left;
+}
+
+.container{
+  clear: both;
 }
