--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -42,17 +42,41 @@ h1 {
 #floating-signup-page {
   width: 200px;
   margin-left: auto;
- /* margin-right: 200px;*/
   padding: 50px;
   margin-top: 0px;
   margin-bottom: 50px;
   border-radius: 5px;
   background-color:rgba(255,0,0,0.2);
-*/  color: white;
+  color: white;
 }
 
 #floating-login-page {
   width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 50px;
+  margin-top: 0px;
+  margin-bottom: 50px;
+  border-radius: 5px;
+  background-color:rgba(255,0,0,0.2);
+  color: white;
+}
+
+
+#floating-artists-page {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 50px;
+  margin-top: 0px;
+  margin-bottom: 50px;
+  border-radius: 5px;
+  background-color:rgba(255,0,0,0.2);
+  color: white;
+}
+
+#floating-profile-page {
+  width: 400px;
   margin-left: auto;
   margin-right: auto;
   padding: 50px;
