--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,3 +1,5 @@
+<div id="floating-profile-page">
+  <h1>Profile Page</h1>
 <p id="notice"><%= notice %></p>
 
 
@@ -32,5 +34,5 @@
 <%= link_to 'Add a song', new_song_path %>
 <%= link_to 'Edit', edit_artist_path(@artist) %>
 <%= link_to 'Back', artists_path %>
-
+</div>
 
