--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,5 +1,5 @@
+<div class="floating-page-400px">
 <h1>Editing comment</h1>
-
 <%= render 'form' %>
-
 <%= link_to 'Back', song_comment_path(@song) %>
+</div>
