--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,7 @@
+<div class="floating-page-400px">
 <h1>New comment</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', song_comments_path(@song) %>
+</div>
