--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,5 +1,7 @@
+<div class="floating-page-400px">
 <p id="notice"><%= notice %></p>
 
 
 <%= link_to 'Edit', edit_song_comment_path(@song, @comment) %> |
 <%= link_to 'Back', song_comment_path(@song) %>
+</div>
