--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New song</h1>
+<div class="floating-page-200px">
+<h1>Add a song</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', songs_path %>
+
+</div>
