--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -29,13 +29,25 @@ a:hover {
   background-color:#EBE2C2;
 }
 
+
 h1 {
   color: white;
 }
 
-
 .profile_img img {
+  display: block;
+  clear: both;
+  float: left;
   max-width: 100px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.comment_stuff {
+  display: block;
+  clear: both;
+  margin-top: 10px;
+  margin-bottom: 25px;
 }
 
 
@@ -50,7 +62,7 @@ h1 {
   color: white;
 }
 
-#floating-login-page {
+.floating-page-200px {
   width: 200px;
   margin-left: auto;
   margin-right: auto;
@@ -63,7 +75,7 @@ h1 {
 }
 
 
-#floating-artists-page {
+.floating-page-400px {
   width: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -75,20 +87,9 @@ h1 {
   color: white;
 }
 
-#floating-profile-page {
-  width: 400px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 50px;
-  margin-top: 0px;
-  margin-bottom: 50px;
-  border-radius: 5px;
-  background-color:rgba(255,0,0,0.2);
-  color: white;
-}
 
 a {
-  color: white
+  color: white;
 }
 
 
@@ -100,6 +101,19 @@ label {
   text-align: left;
 }
 
-.container{
+.container {
   clear: both;
 }
+
+ul {
+  list-style: none;
+}
+
+ul a {
+  text-decoration: none;
+}
+
+.img_container {
+  text-align: center;
+}
+
