--- a/app/views/comments/flagged_comments.html.erb
+++ b/app/views/comments/flagged_comments.html.erb
@@ -1,5 +1,6 @@
+<div class="floating-page-400px">
 <h1>Flagged comments</h1>
-<table border="1">
+<table>
   <tr>
   <th>Comment:</th>
   <th>Comment made by:</th>
@@ -9,11 +10,12 @@
   <% @comments.each do |comment| %>
   <td><%= comment.comment_for_artist %></td>
   <td><%= comment.artist.band_name %></td>
-  <td><%= comment.created_at %></td>
+  <td><%= distance_of_time_in_words(comment.created_at, Time.now) %></td>
   <td><%= link_to "Delete", song_comment_path(comment.song.id ,comment.id), method: :delete, data: { confirm: 'Are you sure?' } %><!-- when using nested routes, you have to specify the path and pass it the id's. in rake routes, the song_comment path is for show, update and destroy -->
   </tr>
   <% end %>
 </table>
+</div>
 
 
 
