--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -4,7 +4,7 @@
 <% @artists.each do |artist| %>
   <tr>
     <td><%= artist.band_name %></td>
-    <td class="profile_img"><%= link_to image_tag(artist.band_image.thumb), artist %></td>
+    <td><%= link_to image_tag(artist.band_image.thumb, class: "profile_img"), artist %></td>
     <td><%= link_to 'Edit profile', edit_artist_path(artist) if can? :edit, artist %></td>
     <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } if can? :delete, artist %></td>
   </tr>
