images showing correctly on homepage

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -45,6 +45,10 @@ h1 {
   box-shadow: 0 0 8px rgba(0, 0, 0, .7);
 }
 
+.profile_info {
+  float:left;
+}
+
 .comment_stuff {
   display: block;
   clear: both;
@@ -107,6 +111,14 @@ label {
   clear: both;
 }
 
+.comment_container {
+  clear:both;
+  padding-bottom: 10px;
+}
+
+.comment_image_container {
+}
+
 ul {
   list-style: none;
 }
@@ -120,4 +132,29 @@ ul a {
 }
 
 
+/**
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    contenteditable attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that are clearfixed.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
 
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    *zoom: 1;
+}
